--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "project-name",
+  "name": "back-diploma",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Aleksandr Kryvets",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -20,6 +20,18 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn test"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn format",
+      "yarn lint",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.6.13",
@@ -33,6 +45,7 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "crypto": "^1.0.1",
+    "husky": "^5.1.3",
     "mongoose": "^5.12.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -60,6 +73,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
